--- a/assessment1/src/index.css
+++ b/assessment1/src/index.css
@@ -13,13 +13,15 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
+li{
+  font-size: small;
+  text-align: left !important;
 }
-a:hover {
-  color: #535bf2;
+
+input{
+  margin-left: 1%;
+  margin-right: 1%;
+  font-size: medium;
 }
 
 body {
@@ -38,8 +40,8 @@ h1 {
 button {
   border-radius: 8px;
   border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
+  padding: 0.3em 1em;
+  font-size: medium;
   font-weight: 500;
   font-family: inherit;
   background-color: #1a1a1a;
@@ -52,17 +54,4 @@ button:hover {
 button:focus,
 button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
-}
-
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
 }
